tests/negative/gold/assign4_test.gold
tests/negative/assign4_test.toit:5:7: error: Expected class name
class class A:
      ^~~~~
tests/negative/assign4_test.toit:8:17: error: Unresolved super class
class B extends A:
                ^
tests/negative/assign4_test.toit:6:12: error: Members can't be abstract in non-abstract class
  abstract bar= x
           ^~~
tests/negative/assign4_test.toit:10:5: error: Can't assign to unknown 'bar'
    super = 22
    ^~~~~
Compilation failed.
